<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:layout_marginTop="300dp">

	<LinearLayout
		android:layout_height="130dp"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:background="#DDDDDD"
		android:id="@+id/zclView">

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1.0"
			android:gravity="center"
			android:id="@+id/start"
			android:background="@drawable/button">

			<RelativeLayout
				android:layout_height="28dp"
				android:layout_width="28dp"
				android:background="@drawable/image_3"/>

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/start"
				android:layout_marginTop="6dp"
				android:textSize="12sp"/>

		</LinearLayout>

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1.0"
			android:layout_marginEnd="0.5dp"
			android:layout_marginStart="0.5dp"
			android:gravity="center"
			android:id="@+id/stop"
			android:background="@drawable/button">

			<RelativeLayout
				android:layout_height="28dp"
				android:layout_width="28dp"
				android:background="@drawable/image_1"/>

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/stop"
				android:layout_marginTop="6dp"
				android:textSize="12sp"/>

		</LinearLayout>

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1.0"
			android:gravity="center"
			android:id="@+id/check"
			android:background="@drawable/button">

			<RelativeLayout
				android:layout_height="28dp"
				android:layout_width="28dp"
				android:background="@drawable/image_2"/>

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/check"
				android:layout_marginTop="6dp"
				android:textSize="12sp"/>

		</LinearLayout>

	</LinearLayout>

	<LinearLayout
		android:layout_height="0.5dp"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:background="#DDDDDD"/>

	<LinearLayout
		android:layout_height="130dp"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:background="#DDDDDD">

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1.0"
			android:id="@+id/tinycc"
			android:gravity="center"
			android:background="@drawable/button">

			<RelativeLayout
				android:layout_height="28dp"
				android:layout_width="28dp"
				android:background="@drawable/image_5"/>

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/tinycc"
				android:textSize="12sp"
				android:layout_marginTop="6dp"/>

		</LinearLayout>

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1.0"
			android:layout_marginEnd="0.5dp"
			android:layout_marginStart="0.5dp"
			android:id="@+id/ipt"
			android:gravity="center"
			android:background="@drawable/button">

			<RelativeLayout
				android:layout_height="28dp"
				android:layout_width="28dp"
				android:background="@drawable/image_7"/>

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/conf"
				android:textSize="12sp"
				android:layout_marginTop="6dp"/>

		</LinearLayout>

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="wrap_content"
			android:orientation="vertical"
			android:layout_weight="1.0"
			android:id="@+id/ms"
			android:gravity="center"
			android:background="@drawable/button">

			<RelativeLayout
				android:layout_height="28dp"
				android:layout_width="28dp"
				android:background="@drawable/image_6"/>

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/pattern"
				android:textSize="12sp"
				android:layout_marginTop="6dp"/>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>

